--- a/hisac-web/src/main/webapp/WEB-INF/development.properties
+++ b/hisac-web/src/main/webapp/WEB-INF/development.properties
@@ -42,13 +42,24 @@ pfxFileName=hisacweb-develop.pfx
 pfxCode=f+Rbf5LExI7AJil+mzOYtxnBA6fX879uv2nd6f0SvTw=
 
 ### SQL Connection Setting
-sqlserver_ip=211.23.163.52
+#sqlserver_ip=211.23.163.52
+#sqlserver_port=8462
+##sqlserver_ip=34.80.101.94
+##sqlserver_port=31305
+#sqlserver_database=hisac
+#sqlserver_username=hisac
+#sqlserver_code=K9+g4nZcYUNHpIJt1b9JAQ==
+
+### SQLCONNECT LIFTTAIWAN
+
+sqlserver_ip=59.127.199.98
 sqlserver_port=8462
-#sqlserver_ip=34.80.101.94
-#sqlserver_port=31305
-sqlserver_database=hisac
-sqlserver_username=hisac
-sqlserver_code=K9+g4nZcYUNHpIJt1b9JAQ==
+sqlserver_database=lifttaiwan
+sqlserver_username=sa
+sqlserver_code=6L4MKKolI17feAgmeiGAHQ==
+
+
+
 
 ### SMTP Connection Setting
 #mail_username=gali3344@cyber00rn.org
