更新手機版問題

--- a/hisac-web/src/main/webapp/WEB-INF/development.properties
+++ b/hisac-web/src/main/webapp/WEB-INF/development.properties
@@ -59,6 +59,14 @@ sqlserver_username=sa
 sqlserver_code=6L4MKKolI17feAgmeiGAHQ==
 
 
+### SQLCONNECT LIFTTAIWAN(foreigntest)
+#sqlserver_ip=203.145.195.219
+#sqlserver_port=1433
+#sqlserver_database=foreignsea_test
+#sqlserver_username=webdev
+#sqlserver_code=ag0NjThLOVdVtHIXejEezIUIXGfn/f6+11ah6sGAwDw=
+
+
 
 
 ### SMTP Connection Setting
