--- a/hisac-web/src/main/webapp/WEB-INF/production.properties
+++ b/hisac-web/src/main/webapp/WEB-INF/production.properties
@@ -1,12 +1,12 @@
 ### Web Site Url
-webSiteUrl=https://hisac.nat.gov.tw/
+webSiteUrl=http://localhost:8080/hisac-web/
 #webSiteUrl=http://203.65.107.170/
 
 ### Development Mode
 developmentMode=false
 
 ### Debug Mode
-debugMode=false
+debugMode=true
 
 ### SMS Enable
 enableSMS=true
@@ -38,15 +38,15 @@ historyDays=42
 
 ### Send Mail With Digital Signature Enable
 enableDigitalSignature=true
-pfxFileName=hisacweb-production.pfx
-pfxCode=uobFuIBrSl9nnegU3cVBTg==
+pfxFileName=hisacweb-develop.pfx
+pfxCode=f+Rbf5LExI7AJil+mzOYtxnBA6fX879uv2nd6f0SvTw=
 
 ### SQL Connection Setting
-sqlserver_ip=203.65.107.175
-sqlserver_port=1433
-sqlserver_database=hisac
-sqlserver_username=hisacsa
-sqlserver_code=K9+g4nZcYUNHpIJt1b9JAQ==
+sqlserver_ip=59.127.199.98
+sqlserver_port=8462
+sqlserver_database=lifttaiwan
+sqlserver_username=sa
+sqlserver_code=6L4MKKolI17feAgmeiGAHQ==
 
 ### SMTP Connection Setting
 mail_username=hisac@mohw.gov.tw
@@ -57,32 +57,31 @@ mail_auth=false
 mail_starttls_enable=false
 
 ### reCAPTCHA
-enable_google_recaptcha=true
+enable_google_recaptcha=false
 google_recaptcha_site_key=6LfXhEoUAAAAABPt595NTusjj35SNAFFHMgGuTeQ
 google_recaptcha_security_key=6LfXhEoUAAAAAPYgiQ-UMUfT874ZyqXOx0gjL69s
 
 ### NISAC	
-nisac_key_store=nisacClient-production.jks
-nisac_key_store_p=h11997856
-nisac_trust_store=nisacClientTruststore-production.jks
-nisac_trust_store_p=Sd@nccst116
-nisac_url=https://nisac.nat.gov.tw/nserver/rest/services/discovery
-nisac_member_id=hisac_api
-nisac_member_p=EP4574o5s719
-nisac_member_dcn=8
+nisac_key_store=nisacClient-develop.jks
+nisac_key_store_p=Hisac9988776
+nisac_trust_store=nisacClientTruststore-develop.jks
+nisac_trust_store_p=NccstNisac
+nisac_url=https://nisac.nccst.nat.gov.tw/nserver/rest/services/discovery
+nisac_member_id=h-isac
+nisac_member_p=Hisac9988776
+nisac_member_dcn=107
 
 ### NCERT
-ncert_key_store=ncertClient-production.jks
-#ncert_key_store_p=Hcert20190601
+ncert_key_store=ncertClient-develop.jks
 ncert_key_store_p=HNcert
-ncert_trust_store=ncertClientTruststore-production.jks
+ncert_trust_store=ncertClientTruststore-develop.jks
 ncert_trust_store_p=NccstNcert
-ncert_url=https://www.ncert.nat.gov.tw:8888/nserver/rest/services/discovery
-ncert_inbox_url=https://www.ncert.nat.gov.tw:8888/nserver/rest/services/inbox
+ncert_url=https://ncert.nccst.nat.gov.tw:8888/nserver/rest/services/discovery
+ncert_inbox_url=https://ncert.nccst.nat.gov.tw:8888/nserver/rest/services/inbox
 ncert_member_id=hcccert
-ncert_member_p=Hcert20200615
+ncert_member_p=Hcert20190601
 ncert_member_dcn=107
 
 ### VADER
-upload_url=https://211.72.129.118:5003/iii/api/upload/
-search_url=https://211.72.129.118:5002/iii/api/search/%s
+upload_url=https://127.0.0.1:5003/iii/api/upload/
+search_url=https://127.0.0.1:5002/iii/api/search/%s
