--- a/hisac-web/src/main/webapp/WEB-INF/development.properties
+++ b/hisac-web/src/main/webapp/WEB-INF/development.properties
@@ -3,7 +3,7 @@
 webSiteUrl=http://localhost:8080/hisac-web/
 
 ### Development Mode
-developmentMode=false
+developmentMode=true
 
 ### Debug Mode
 debugMode=true
@@ -52,12 +52,22 @@ pfxCode=f+Rbf5LExI7AJil+mzOYtxnBA6fX879uv2nd6f0SvTw=
 
 ### SQLCONNECT LIFTTAIWAN
 
-sqlserver_ip=59.127.199.98
-sqlserver_port=8462
-sqlserver_database=lifttaiwan
-sqlserver_username=sa
-sqlserver_code=6L4MKKolI17feAgmeiGAHQ==
+##old
+#sqlserver_ip=59.127.199.98
+#sqlserver_port=8462
+#sqlserver_database=lifttaiwan
+#sqlserver_username=sa
+#sqlserver_code=6L4MKKolI17feAgmeiGAHQ==
 
+
+#sqlserver_ip=220.133.81.245
+#sqlserver_port=14385
+sqlserver_ip=192.168.0.216
+sqlserver_port=1433
+
+sqlserver_database=foreignsea_test
+sqlserver_username=lifttaiwan
+sqlserver_code=8Su3lXXGmYfVsKHg8ixORw==
 
 ### SQLCONNECT LIFTTAIWAN(foreigntest)
 #sqlserver_ip=203.145.195.219
